[package]
name = "brk_rolldown_ecmascript_utils"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = true
repository.workspace = true
description = "Helper utilities for ECMAScript processing"

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
oxc = { workspace = true }
rolldown_common = { workspace = true }
smallvec = { workspace = true }
